Bugfixes and updates:
- Disable native menu while loading account
- Update locales
- Scrollbar left position bugfix
- Add scrollbar to multiple account sidebar
- Settings popups content vertical alignment fix

--- a/src/desktop/src/ui/components/scrollbar.scss
+++ b/src/desktop/src/ui/components/scrollbar.scss
@@ -9,6 +9,7 @@
             display: block;
             position: absolute;
             top: 0px;
+            left: auto !important;
             right: 7px;
             opacity: 0;
             width: 6px;
